samples/_failures_safe/1761371423_a243a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09448086.c: In function ‘main’:
./samples/SAFE/__tmp_09448086.c:161:9: error: expected expression at end of input
  161 |         fprintf(stderr,
      |         ^~~~~~~
./samples/SAFE/__tmp_09448086.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_09448086.c:161:9: error: expected declaration or statement at end of input
